--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "^3.0.2",
     "react-sortable-hoc": "^0.6.3",
     "react-toastr": "^2.8.2",
+    "react-tooltip": "^3.9.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8",
