--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ramda": "^0.24.0",
     "react": "^15.4.2",
     "react-async-script-loader": "^0.3.0",
+    "react-color": "^2.14.1",
     "react-copy-to-clipboard": "^4.2.3",
     "react-datetime": "^2.8.8",
     "react-dom": "^15.4.2",
