--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-copy-to-clipboard": "^4.2.3",
     "react-datetime": "^2.8.8",
     "react-dom": "^15.4.2",
+    "react-favicon": "0.0.14",
     "react-fontawesome": "^1.5.0",
     "react-onclickoutside": "^5.9.0",
     "react-redux": "^5.0.3",
