--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "hashids": "^1.1.1",
     "lodash.throttle": "^4.1.1",
     "lodash.truncate": "^4.4.2",
+	"redux-logger": "^3.0.6",
     "moment": "^2.17.1",
     "opentok-accelerator-core": "^2.0.12",
+    "opentok-screen-sharing": "^1.0.27",
     "opentok-solutions-logging": "^1.0.10",
     "platform": "^1.3.4",
     "prop-types": "^15.5.8",
@@ -48,7 +50,6 @@
     "flow-bin": "*",
     "opentok-annotation": "^2.0.53",
     "opentok-archiving": "^1.0.19",
-    "opentok-screen-sharing": "^1.0.27",
     "opentok-text-chat": "^1.0.29",
     "react-scripts": "0.9.4"
   },
