--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "interactive-broadcasting-client",
   "version": "2.0.0",
   "private": true,
+  "engines": {
+    "node": "10.14.2",
+    "npm": "6.4.1"
+  },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "classnames": "^2.2.5",
